2003-09-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/mknetrel: Native fixes.

	* cygwin/GNUmakefile (EXTRA_DIST_FILES): Add mknetrel.*

2003-09-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/NEWS.texi: Add note about .ly double click
	feature for Windows.

	* stepmake/stepmake/generic-vars.make: Cygwin fix from stable.

	* cygwin/mknetrel: Updates for native use on Cygwin.

	* lily/parser.yy: Compile fix: add stdio.h for snprintf.

	* stepmake/stepmake/help2man-rules.make: 
	* cygwin/mknetrel: Bugfix for manpages.

	* GNUmakefile.in (SUBDIRS): Use plain srcdir stepmake instead of
	$(builddir).  Stepmake is a normal subdirectory now, that is not
	configured.  Another srcdir build fix.

	* Documentation/topdocs/INSTALL.texi,
	buildscripts/lilypond.words.py, lilypond-font-lock.el,
	lilypond-init.el, lilypond-mode.el, debian/rules,
	make/lilypond.{redhat,madrake,suse}.spec.in, vimrc:
	rename generated file lilypond.words to lilypond.words.el.

2003-09-20  Heikki Junes  <hjunes@cc.hut.fi>

	* ly/chord-modifiers-init.ly, lilypond.vim: updates for vim.

	* GNUmakefile.in, buildscripts/lilypond.words: give only path in
	GNUmakefile.in.

2003-09-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/help2man-rules.make: Allow manpages to fail
	when cross building.

	* configure.in: srcdir build fix.

	* cygwin/GNUmakefile:
	* cygwin/lily-wins.py:
	* cygwin/postremove-lilypond.sh: 
	* cygwin/postinstall-lilypond.sh: Merge from stable.

	* cygwin/bug-lilypond-cygwin.sh: s/lilypond/lilypond-bin,
	s/ly2dvi/lilypond/.

2003-09-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/slur.cc (after_line_breaking): only set control points if
	none supplied yet.

	* input/test/slur-manual.ly: new file.

	* scripts/convert-ly.py (FatalConversionError.sub_chords): convert
	<<  >> chords too.

	* VERSION (PACKAGE_NAME): release 1.9.8

	* scripts/lilypond.py (escape_path): escape spaces in directory names

	* input/test/text-spanner.ly: fixes.
